"style: prevent layout shift by using scrollbar-gutter stable"

--- a/src/index.css
+++ b/src/index.css
@@ -48,11 +48,13 @@
     }
   }
 }
-html, body {
+html,
+body {
   height: auto !important;
   min-height: 100% !important;
   overflow-x: hidden;
   overflow-y: visible !important;
+  scrollbar-gutter: stable;
 }
 
 #root {
